--- a/safety-monitor/vercel.json
+++ b/safety-monitor/vercel.json
@@ -1,5 +1,7 @@
 {
-    "buildCommand": "npx vite build", 
+    "framework": "vite",
+    "installCommand": "rm -rf node_modules && npm install",
+    "buildCommand": "npm run build",
     "rewrites": [
       {
         "source": "/api/:match*",
